# get-psi-data-from-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ruff_error.json  ruff_warning.json
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: github-actions-demo.yml  lint-with-ruff.yml  py-linting-with-ruff-on-actions.yml
get_psi_data_from_api/: __init__.py  main.py  on_gcf_to_bigquery.py
get_psi_data_from_api/modules/: __init__.py  edit_response.py  folder_utils.py  for_getenvs.py  make_api_request.py  resultdata_to_csv.py  setup_logging.py
tests/: __init__.py  test_folder_utils.py
